--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.3.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
